--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora de Gorjetas</title>
 </head>
+
 <body>
-    
+    <div>
+        <h1>Calculadora de Gorjetas</h1>
+    </div>
 </body>
 </html>
