Criacao do input para o valor da conta

--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <div>
         <h1>Calculadora de Gorjetas</h1>
     </div>
+    <div>
+        <form>
+            <label for="bill">
+                <p>Quanto ficou a conta?</p>
+            </label>
+            <p>
+                R$ <input type="number" placeholder="Valor" name="bill">
+            </p>
+        </form>
+    </div>
 </body>
 </html>
