--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
                 <p>Quanto ficou a conta?</p>
             </label>
             <p>
-                R$ <input type="number" placeholder="Valor" name="bill">
+                R$ <input type="number" placeholder="Valor" name="account" id="account">
+            </p>
+            <label for="serviceQual">
+                <p>Como foi seu serviço?</p>
+            </label>
+            <p>
+                <select name="serviceQual" id="serviceQual">
+                    <option disable selected value="0">-- Escolha uma opção</option>
+                    <option value="0.3">30% - Incrível</option>
+                    <option value="0.2">20% - Bom</option>
+                    <option value="0.15">15% - Aceitável</option>
+                    <option value="0.1">10% - Ruim</option>
+                    <option value="0.05">5% - Péssimo</option>
+                </select>
             </p>
         </form>
     </div>
