Adicionando o input de dividir a conta

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                     <option value="0.05">5% - Péssimo</option>
                 </select>
             </p>
+            <label for="people">
+                <p>Quantas pessoas vão dividir a conta?</p>
+            </label>
+            <p>
+                <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
+            </p>
         </form>
     </div>
 </body>
