Criação do botão calcular

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <p>
                 <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
             </p>
+            <button type="submit">Calcular</button>
         </form>
     </div>
 </body>
