Centralizando a div e adicionando borda

--- a/index.html
+++ b/index.html
@@ -9,38 +9,40 @@
 </head>
 
 <body>
-    <div>
-        <h1>Calculadora de Gorjetas</h1>
-    </div>
-    <div>
-        <form>
-            <label for="bill">
-                <p>Quanto ficou a conta?</p>
-            </label>
-            <p>
-                R$ <input type="number" placeholder="Valor" name="account" id="account">
-            </p>
-            <label for="serviceQual">
-                <p>Como foi seu serviço?</p>
-            </label>
-            <p>
-                <select name="serviceQual" id="serviceQual">
-                    <option disable selected value="0">-- Escolha uma opção</option>
-                    <option value="0.3">30% - Incrível</option>
-                    <option value="0.2">20% - Bom</option>
-                    <option value="0.15">15% - Aceitável</option>
-                    <option value="0.1">10% - Ruim</option>
-                    <option value="0.05">5% - Péssimo</option>
-                </select>
-            </p>
-            <label for="people">
-                <p>Quantas pessoas vão dividir a conta?</p>
-            </label>
-            <p>
-                <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
-            </p>
-            <button type="submit">Calcular</button>
-        </form>
+    <div id="container">
+        <div>
+            <h1>Calculadora de Gorjetas</h1>
+        </div>
+        <div>
+            <form>
+                <label for="bill">
+                    <p>Quanto ficou a conta?</p>
+                </label>
+                <p>
+                    R$ <input type="number" placeholder="Valor" name="account" id="account">
+                </p>
+                <label for="serviceQual">
+                    <p>Como foi seu serviço?</p>
+                </label>
+                <p>
+                    <select name="serviceQual" id="serviceQual">
+                        <option disable selected value="0">-- Escolha uma opção</option>
+                        <option value="0.3">30% - Incrível</option>
+                        <option value="0.2">20% - Bom</option>
+                        <option value="0.15">15% - Aceitável</option>
+                        <option value="0.1">10% - Ruim</option>
+                        <option value="0.05">5% - Péssimo</option>
+                    </select>
+                </p>
+                <label for="people">
+                    <p>Quantas pessoas vão dividir a conta?</p>
+                </label>
+                <p>
+                    <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
+                </p>
+                <button type="submit">Calcular</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
