--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <div id="container">
         <div>
-            <h1>Calculadora de Gorjetas</h1>
+            <h1 class="title">Calculadora de Gorjetas</h1>
         </div>
         <div>
-            <form>
+            <form class="tipsForm">
                 <label for="bill">
                     <p>Quanto ficou a conta?</p>
                 </label>
                 <p>
-                    R$ <input type="number" placeholder="Valor" name="account" id="account">
+                    R$ <input type="number" placeholder="Valor" name="account" id="account" class="formInput">
                 </p>
-                <label for="serviceQual">
+                <label for="serviceQual"> 
                     <p>Como foi seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual" id="serviceQual">
+                    <select name="serviceQual" id="serviceQual" class="formInput">
                         <option disable selected value="0">-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível</option>
                         <option value="0.2">20% - Bom</option>
@@ -38,7 +38,7 @@
                     <p>Quantas pessoas vão dividir a conta?</p>
                 </label>
                 <p>
-                    <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
+                    <input type="number" placeholder="1" name="people" id="people" class="formInput"> pessoa(s)
                 </p>
                 <button type="submit">Calcular</button>
             </form>
