--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <p>Quanto ficou a conta?</p>
                 </label>
                 <p>
-                    R$ <input type="number" placeholder="Valor" name="account" id="account" class="formInput">
+                    R$ <input type="number" placeholder="1" name="account" id="account" class="formInput">
                 </p>
                 <label for="serviceQual"> 
                     <p>Como foi seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual" id="serviceQual" class="formInput">
+                    <select name="serviceQual" id="serviceQual" class="formSelected">
                         <option disable selected value="0">-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível</option>
                         <option value="0.2">20% - Bom</option>
@@ -40,7 +40,7 @@
                 <p>
                     <input type="number" placeholder="1" name="people" id="people" class="formInput"> pessoa(s)
                 </p>
-                <button type="submit">Calcular</button>
+                <button type="submit" class="formSubmit">Calcular</button>
             </form>
         </div>
     </div>
