Iniciando o javascript em nosso projeto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div id="container">
         <div>
             <h1 class="title">Calculadora de Gorjetas</h1>
@@ -44,5 +45,7 @@
             </form>
         </div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
