Adicionando o valor da gorjeta e estilizando

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="title">Calculadora de Gorjetas</h1>
         </div>
         <div>
-            <form class="tipsForm">
+            <form class="tipsForm" id="tipsForm">
                 <label for="bill">
                     <p>Quanto ficou a conta?</p>
                 </label>
@@ -43,6 +43,11 @@
                 </p>
                 <button type="submit" class="formSubmit">Calcular</button>
             </form>
+        </div>
+        <div id="totalTip">
+            Gorjeta total:
+            R$ <span id="tip">0,00</span>
+            <p id="each">cada</p>
         </div>
     </div>
 
