--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <p>Quanto ficou a conta?</p>
                 </label>
                 <p>
-                    R$ <input type="number" placeholder="1" name="account" id="account" class="formInput">
+                    R$ <input type="number" placeholder="1" name="account" id="account" class="formInput" required >
                 </p>
                 <label for="serviceQual"> 
                     <p>Como foi seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual" id="serviceQual" class="formSelected">
+                    <select name="serviceQual" id="serviceQual" class="formSelected" >
                         <option disable selected value="0">-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível</option>
                         <option value="0.2">20% - Bom</option>
@@ -39,7 +39,7 @@
                     <p>Quantas pessoas vão dividir a conta?</p>
                 </label>
                 <p>
-                    <input type="number" placeholder="1" name="people" id="people" class="formInput"> pessoa(s)
+                    <input type="number" placeholder="1" name="people" id="people" class="formInput" required> pessoa(s)
                 </p>
                 <button type="submit" class="formSubmit">Calcular</button>
             </form>
