--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="totalTip">
             Gorjeta total:
             R$ <span id="tip">0,00</span>
-            <p id="each">cada</p>
+            <spam id="each">cada</span>
         </div>
     </div>
 
